samples/_failures_safe/1761182813_08d496_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_074706d0.c: In function ‘tokenize’:
./samples/SAFE/__tmp_074706d0.c:172:5: error: expected declaration or statement at end of input
  172 |     }
      |     ^
